--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ description: A website that seeks to make me seems hireable, hopefully.
 
 # User settings
 username: Andrew Chen
-user_description: Young memer at heart
+user_description: Student software developer
 user_skills:  Skilled at Java Development, and web development.
 user_title: Software Developer
 email: andrew.chen923@gmail.com
