updated code info and got rid of placeholders

--- a/_config.yml
+++ b/_config.yml
@@ -6,8 +6,8 @@ description: A website that seeks to make me seems hireable, hopefully.
 
 # User settings
 username: Andrew Chen
-user_description: Student software developer
-user_skills:  Skilled at Java Development, and web development.
+user_description: Hi. I'm a Computer Science Student at Stevens Institute of Technology in Hoboken, NJ. I like to code and make things look nice. 
+user_skills:  Java Development and Javascript web development.
 user_title: Software Developer
 email: andrew.chen923@gmail.com
 github_username: xChenny 
