added domus and updated about section

--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ description: A website that seeks to make me seems hireable, hopefully.
 
 # User settings
 username: Andrew Chen
-user_description: Hi. I'm a Computer Science Student at Stevens Institute of Technology in Hoboken, NJ. I like to code and make things look nice. 
+user_description: Hi. I'm a Computer Science Student at Stevens Institute of Technology in Hoboken, NJ. I like to code, modifiy my UNIX computers, play video games, and meet new people.
 user_skills:  Java Development and Javascript web development.
 user_title: Software Developer
 email: andrew.chen923@gmail.com
