--- a/_config.yml
+++ b/_config.yml
@@ -6,8 +6,8 @@ description: A website that seeks to make me seems hireable, hopefully.
 
 # User settings
 username: Andrew Chen
-user_description: Hi. I'm a Computer Science Student at Stevens Institute of Technology in Hoboken, NJ. I like to code, assemble and customize computers, play video games, and meet new people.
-user_skills:  Java Development and Javascript web development.
+user_description: Hi. I'm a Computer Science Student attending Stevens Institute of Technology. My hobbies include coding, reading, and computer games.
+user_skills:  Full Stack Javascript Web Development.
 user_title: Software Developer
 email: andrew.chen923@gmail.com
 github_username: xChenny 
