--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,14 @@
-language: ruby
+lge: ruby
+rvm:
+  - 2.1
+script:
+  - bundle exec jekyll build
+  - bundle exec htmlproofer ./_site --only-4xx --check-favicon --check-html
+env:
+  global:
+    - NOKOGIRI_USE_SYSTEM_LIBRARIES=true # speeds up installation of html-proofer
+
+anguage: ruby
 rvm:
  - 2.2
  - jruby
