excluded vendor in config.yml which was a solution found in a github issues

--- a/_config.yml
+++ b/_config.yml
@@ -16,4 +16,4 @@ github_username: xChenny
 google-analytics:
     id: "UA-99120164-1"
 
-exclude: ['package.json', 'src' , 'node_modules']
+exclude: ['vendor', 'package.json', 'src' , 'node_modules']
